[tool.poetry]
name = "repl-nix-tushcareers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_tushcareers"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-bcrypt = "^1.0.1"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
wtforms = "^3.1.2"
flask-wtf = "^1.2.1"
flask-migrate = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
